--- a/hearthstonedcks/src/main/resources/templates/anuncios.html
+++ b/hearthstonedcks/src/main/resources/templates/anuncios.html
@@ -17,9 +17,9 @@
 						<input type="text" placeholder="busqueda" name="busqueda">
 						<input type="submit" value="Buscar">
 						
-						<a href="#"><button style="color:black;">Login</button></a>
+						<a href="login.html"><button style="color:black;">Login</button></a>
 						<a href="#">|</a>
-						<a href="#"><button style="color:black;">Resgister</button></a>
+						<a href="registrarse.html"><button style="color:black;">Register</button></a>
 						
 					</div>
 				</aside>
@@ -35,9 +35,11 @@
 						</div>
 					</aside>
 					</section>
-				
+			<section class="pagina">
 			<div class="container-anun">
+			<a href="publicar.html"><button style="color:black;">Publicar</button></a>
 					<section class="primary-content" role="main">
+					
 									<ul class="listing listing-post post-listing">
 										
 														<p> 
@@ -60,7 +62,7 @@
 					</section>
 				
 			</div>
-			
+			</section>
 			
 				</nav>
 			</body>
