--- a/hearthstonedcks/src/main/resources/templates/anuncios.html
+++ b/hearthstonedcks/src/main/resources/templates/anuncios.html
@@ -37,7 +37,8 @@
 					</section>
 			<section class="pagina">
 			<div class="container-anun">
-			<a href="publicar.html"><button style="color:black;">Publicar</button></a>
+			
+			<a href="publicar.html"><br><button style="color:black;">Publicar</button></a>
 					<section class="primary-content" role="main">
 					
 									<ul class="listing listing-post post-listing">
