--- a/hearthstonedcks/src/main/resources/templates/noticias.html
+++ b/hearthstonedcks/src/main/resources/templates/noticias.html
@@ -35,8 +35,10 @@
 						</div>
 					</aside>
 					</section>
-					
+					<section class="pagina">
 					<div class="container-anun">
+					
+					<a href="publicarN.html"><br><button style="color:black;">Publicar</button></a>
 					<section class="primary-content" role="main">
 									<ul class="listing listing-post post-listing">
 										
@@ -62,6 +64,7 @@
 					</section>
 				
 			</div>
+			</section>
 			
 			
 			
