--- a/hearthstonedcks/src/main/resources/templates/noticias.html
+++ b/hearthstonedcks/src/main/resources/templates/noticias.html
@@ -17,9 +17,9 @@
 						<input type="text" placeholder="busqueda" name="busqueda">
 						<input type="submit" value="Buscar">
 						
-						<a href="#"><button style="color:black;">Login</button></a>
+						<a href="login.html"><button style="color:black;">Login</button></a>
 						<a href="#">|</a>
-						<a href="#"><button style="color:black;">Resgister</button></a>
+						<a href="registrarse.html"><button style="color:black;">Resgister</button></a>
 						
 					</div>
 				</aside>
