Todo bien, todo correcto y yo que me alegro
THIS ISN'T EVEN MY FINAL FORM

--- a/hearthstonedecks_/src/main/resources/templates/index.html
+++ b/hearthstonedecks_/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 	<body>
 	<nav>
 			<section class="nav-container">
-				<aside class="logo"><a href = "/"><img src="HSDECKS.png" width="200" height="40" alt= "MyCompany Logo"/></a>
+				<aside class="logo"><a href = "/"><img src="imagenes/HSDECKS.png" width="200" height="40" alt= "MyCompany Logo"/></a>
 				</aside>
 				<aside class="menu">
 					<div class="menu-content">
@@ -36,8 +36,8 @@
 						<a href="mazo" target="_blank">Mazos</a>
 						<a href="carta" target="_blank">Cartas</a>
 						<a href="notici" target="_blank">Noticias</a>
-						<a href="anuncios" target="_blank">Anuncios</a>
-						<a href="reglamento" target="_blank">Reglamento</a>
+						<a href="anunci" target="_blank">Anuncios</a>
+						<a href="reglas" target="_blank">Reglamento</a>
 						
 						
 					</div>
