--- a/hearthstonedecks_/src/main/resources/templates/anuncios.html
+++ b/hearthstonedecks_/src/main/resources/templates/anuncios.html
@@ -9,7 +9,7 @@
 	<body>
 		<nav>
 			<section class="nav-container">
-				<aside class="logo"><a href="index"><img src="imagenes/HSDECKS.PNG" width="200" height="40" alt="MyCompanyLogo"></a>
+				<aside class="logo"><a href="/"><img src="imagenes/HSDECKS.PNG" width="200" height="40" alt="MyCompanyLogo"></a>
 				</aside>
 				<aside class="menu">
 					<div class="menu-content">
@@ -36,38 +36,32 @@
 						<a href="mazo" target="_blank">Mazos</a>
 						<a href="carta" target="_blank">Cartas</a>
 						<a href="notici" target="_blank">Noticias</a>
-						<a href="anuncios" target="_blank">Anuncios</a>
-						<a href="reglamento" target="_blank">Reglamento</a>
+						<a href="anunci" target="_blank">Anuncios</a>
+						<a href="reglas" target="_blank">Reglamento</a>
 						</div>
 					</aside>
 					</section>
 				
+			<section class="pagina">
 			<div class="container-anun">
+			
+			<a href="publicar.html"><br><button style="color:black;">Publicar</button></a>
 					<section class="primary-content" role="main">
-									<ul class="listing listing-post post-listing">
-										
-														<p> 
-														
-														<div class="tituloANUNN">
-														<p>{{#anuncio}}
-															<h2>{{titulo}}<br></h2>
-															<p>{{contenido}}</p>
-															
-																<br>{{fechaAnuncio}}
-															
-																<p> </p><br><br>{{/anuncio}}
-															
-														</div>
-													
-													
-														
-										
-									</ul>
-					</section>
-				
-			</div>
-			
-			
+									<ul class="listing listing-post post-listing">		
+							<p> 
+							
+							<div class="tituloANUNN">
+								<p>{{#anuncio}}
+								<h2>{{titulo}}<br></h2>
+								<p>{{contenido}}</p>
+									<br>{{fechaAnuncio}}
+									<p>_________________________________________________________________________________________________</p>
+								<p> </p><br><br>{{/anuncio}}
+							</div>			
+						</ul>
+					</section>				
+				</div>
+			</section>
 				</nav>
 			</body>
 </html>
