--- a/hearthstonedecks_/src/main/resources/templates/reglamento.html
+++ b/hearthstonedecks_/src/main/resources/templates/reglamento.html
@@ -9,23 +9,19 @@
 	<body>
 	<nav>
 			<section class="nav-container">
-				<aside class="logo"><a href = "notici"><img src="imagenes/HSDECKS.png" width="200" height="40" alt= "MyCompany Logo"/></a>
+				<aside class="logo"><a href = "index"><img src="imagenes/HSDECKS.png" width="200" height="40" alt= "MyCompany Logo"/></a>
 				</aside>
 				<aside class="menu">
 					<div class="menu-content">
 						
 							<input type="text" placeholder="busqueda" name="busqueda"> 
 							<input type="submit" value="Buscar"> 
+							
 							{{#sinsesion}}
 							<a href="login"><button style="color:black;">Login </button></a> 
 							<a href="#">|</a>
 							<a href="registrarse.html"> <button style="color:black;">Register</button></a>
 							{{/sinsesion}}
-							{{#sesion}}
-							<a href=""> <button style="color:black;">Cerrar Sesion </button></a>
-							<a href="#">|</a>
-							<a> {{nick}}</a>
-							{{/sesion}}
 						
 						
 					</div>
