cacheable,dockerfile pero falta Balanceo y jar

--- a/hearthstonedecks_/src/main/resources/templates/deslogeo_correcto.html
+++ b/hearthstonedecks_/src/main/resources/templates/deslogeo_correcto.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Cerrar Sesion</title>
 </head>
 <body>
 	<center>
-		<p>Has cerrado la sesion en HearthStoneDecks,¡hasta pronto :D!</p>
+		<p>Has cerrado la sesion en HearthStoneDecks,Â¡hasta pronto :D!</p>
 		<a href= "/">Volver al inicio.</a>
 	</center>
 </body>
