--- a/hearthstonedecks_/src/main/resources/templates/login_incorrecto.html
+++ b/hearthstonedecks_/src/main/resources/templates/login_incorrecto.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Inicio de la sesion incorrecto</title>
 </head>
 <body>
 	<center>
-		<p>Error, el nick o la contraseña es incorrecta.</p>
+		<p>Error, el nick o la contraseÃ±a es incorrecta.</p>
 		<a href="/login">Volver a logearse.</a>
 	</center>
 </body>
