--- a/hearthstonedecks_/src/main/resources/templates/registrarse.html
+++ b/hearthstonedecks_/src/main/resources/templates/registrarse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <link rel="stylesheet" href="css/sRegister.css">
 <title>Register</title>
 </head>
@@ -15,13 +15,13 @@
 			<input type="text" name="apellido2" placeholder="Segundo Apellido" required>
 			<input type="text" name="nick" placeholder="Nombre de Usuario" required>
 			<input type="email" name="correo" placeholder="Direccion de correo electronico" required>
-			<input type="password" name="contrasenia" placeholder="Contraseña" required>
+			<input type="password" name="contrasenia" placeholder="ContraseÃ±a" required>
 			<input type="date" name="fechanac" placeholder="Fecha de Nacimiento" required>
 			<input type="text" name="pais" placeholder="Pais de Origen" required>
 			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<input type="submit" value="Registrarse" required class="btn_enviar">
 			
-			<p class="form_link">¿Ya tienes cuenta?<a href="login">Inicie sesión aquí</a></p>
+			<p class="form_link">Â¿Ya tienes cuenta?<a href="login">Inicie sesiÃ³n aquÃ­</a></p>
  			
 		</div>
 	</form>
