--- a/hearthstonedecks_/src/main/resources/templates/login.html
+++ b/hearthstonedecks_/src/main/resources/templates/login.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <link rel="stylesheet" href="css/sRegister.css">
 <title>Login</title>
 </head>
 <body>
 	<h1>Formulario de Login</h1>
 	<form action="/logearse" method='post' class="form_register">
-		<h2 class="form_titulo">Iniciar Sesión</h2>	
+		<h2 class="form_titulo">Iniciar SesiÃ³n</h2>	
 		<div class="contenedor-inputs">
 			<input type="text" name="nick" placeholder="Nombre de usuario o Correo electronico" required>
-			<input type="password" name="contrasenia" placeholder="Contraseña" required>
+			<input type="password" name="contrasenia" placeholder="ContraseÃ±a" required>
 			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<input type="submit" value="Acceder" required class="btn_enviar">
-			<p class="form_olvidado"><a href="">He olvidado mi contraseña</a></p>
-			<p class="form_link">¿No tienes cuenta?<a href="/register">Inicie sesión aquí</a></p>
+			<p class="form_olvidado"><a href="">He olvidado mi contraseÃ±a</a></p>
+			<p class="form_link">Â¿No tienes cuenta?<a href="/register">Inicie sesiÃ³n aquÃ­</a></p>
 		</div>
 	</form>
 </body>
