--- a/hearthstonedecks_/src/main/resources/templates/nuevaCarta.html
+++ b/hearthstonedecks_/src/main/resources/templates/nuevaCarta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="ISO-8859-1">
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
 		<title>Nueva Carta</title>
 	<link rel="stylesheet" href="css/sRegister.css">
@@ -10,7 +10,7 @@
 	<body>
 	<h1><br></h1>
 		<form action="/nuevaCarta" method="post" class="form_register">
-		<h2 class="form_titulo">Añadir carta nueva</h2>	
+		<h2 class="form_titulo">AÃ±adir carta nueva</h2>	
 		<div class="contenedor-inputs">
 		    <div>
 		        <input placeholder="Nombre" type="text"  id="nombre" name="nombre" required>
