--- a/hearthstonedecks_/src/main/resources/templates/publicar.html
+++ b/hearthstonedecks_/src/main/resources/templates/publicar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="ISO-8859-1">
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
 		<title>Publicar</title>
 	<link rel="stylesheet" href="css/sRegister.css">
@@ -30,4 +30,4 @@
 		    </div>
 		</form>
 	</body>
-</html>>
+</html>
